# ps_add_scrapping

./: .gitignore  Cargo.toml  README.md  Settings.toml.example  config.php  scrap.php
.github/workflows/: release.yml
ps_add_scrapping/: Cargo.toml
ps_add_scrapping/src/: main.rs
ps_add_scrapping/src/utils/: create_wordpress_page.rs  extract_developer_name.rs  extract_multistore_compatibility.rs  extract_price_ht.rs  extract_product_id.rs  extract_title.rs  mod.rs
src/: add_page.rs  check_page.rs  extract_data.rs  main.rs  process.rs  scrape_and_create_products.rs  sitemap_update.rs
src/config/: config.rs  configuration.rs  get_configuration.rs  mod.rs
src/extractors/: mod.rs
src/scraping/: extract_breadcrumb.rs  extract_caracteristiques.rs  extract_caracteristiques.rs_  extract_description.rs  extract_description.rs_  extract_developer_name.rs  extract_last_update.rs  extract_last_update.rs_  extract_meta_description.rs  extract_module_version.rs  extract_multistore_compatibility.rs  extract_override.rs  extract_override.rs_  extract_price_ht.rs  extract_product_id.rs  extract_publication_date.rs  mod.rs
src/utilities/: check_page.rs  csv_reader.rs  extract_data.rs  extract_id_from_url.rs  generate_random_delay.rs  insert_xml_into_sql.rs  mod.rs  process_images.rs
src/utils/: create_wordpress_page.rs  extract_publication_date.rs_  mod.rs
src/wordpress/: check_page_exists.rs  create_wordpress_page.rs  main.rs  mod.rs  wc_create_product.rs  wp_check_page.rs  wp_create_page.rs
wordpress_extend_api/: custom-product-cat-fields.php
(+32 files in other folders)
