[package]
name = "ps_add_scrapping"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
config = "0.14.0"
csv = "1.3.0"
csv-async = { version = "1.3.0", features = ["tokio"] }
futures = "0.3.30"
html5ever = "0.27.0"
regex = "1.10.5"
reqwest = { version = "0.12.4", features = ["json"] }
scraper = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
