[package]
name = "ps_add_scrapping"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
chrono = "0.4.38"
colored = "2.1.0"
config = "0.14.0"
csv = "1.3.0"
csv-async = { version = "1.3.0", features = ["tokio"] }
futures = "0.3.30"
html5ever = "0.27.0"
htmlentity = "1.3.2"
regex = "1.10.5"
reqwest = { version = "0.12.4", features = ["json", "multipart"] }
scraper = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
urlencoding = "2.1.3"
tempfile = "3.10.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
quick-xml = "0.36.0"
rand = "0.8.5"
